--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   connectivity: ^3.0.6
-  firebase_auth: ^3.3.9
-  firebase_core: ^1.13.1
+  firebase_auth: ^4.2.8
+  firebase_core: ^2.6.1
   provider: ^6.0.2
-  cloud_firestore: ^3.1.11
+  cloud_firestore: ^4.4.2
   shared_preferences: ^2.0.9
 
 dev_dependencies:
@@ -50,7 +50,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -97,3 +97,6 @@ flutter:
 
   assets:
     - assets/logoImage.jpg
+    - assets/facebook.png
+    - assets/googleImage.png
+    - assets/backgroundImage.png
