--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   provider: ^6.0.2
   cloud_firestore: ^4.4.2
   shared_preferences: ^2.0.9
+  google_sign_in: ^5.4.4
+  image_picker: ^0.8.7
+  firebase_storage: ^11.0.15
 
 dev_dependencies:
   flutter_test:
